--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Lorem</title>
+    <title>Greaves Davide</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -53,7 +53,6 @@
       background-image: url(images/bkg.png);
       background-size: cover;
       background-repeat: no-repeat;
-      backdrop-filter: blur(5px);
       background-color: rgb(15, 15, 22);
     }
 
@@ -61,6 +60,7 @@
       border-radius: 5px;
       padding: 20%;
       width: fit-content;
+      backdrop-filter: blur(5px);
       background-color: rgba(230, 230, 230, 0.678);
       border: solid 2px rgba(230, 230, 230, 0.678);
       height: 10%;
